@@ -126,9 +126,9 @@ public class GamePanel extends JPanel implements ActionListener {
             powerUps.add(powerUp);
             System.out.println("Powerup: "+powerUp.getPosition());
             System.out.println(CollisionUtil.getTileIndex(powerUp.getPosition()));
-            MapManager.drawPowerUp((PowerUp) powerUps.getFirst(), g, this);
+            MapManager.drawPowerUp((PowerUp) powerUps.get(0), g, this);
 //            System.out.println(CollisionUtil.getTileIndex(new Vector2D(512, 512)));
-        } else MapManager.drawPowerUp((PowerUp) powerUps.getFirst(), g, this);
+        } else MapManager.drawPowerUp((PowerUp) powerUps.get(0), g, this);
 
         PlayerTank playerTank = MapManager.getPlayerTank(tanks);
         for (Bullet bullet : playerTank.getBullets()) {
